    * Preferences dialog, by Paul Kishimoto
    * Send task by mail plugin by Luca Invernizzi
    * Import_json plugin by Bryce Harrington
    * Improve RTM plugin (bug #520427): don't sync tasks from archived lists
    * Automatic cleanup of closed task, plugin by Luca Invernizzi
    * Allow to change dismissed date of tasks by Luca Invernizzi
    * Docky applet support, by Luca Invernizzi
    * Allow to change closed date of tasks, by Lionel Montrieux, bug #502111 
    * notification area plugin updated to support appindicate by Luca Invernizzi and Jono Bacon
    * gtg_new task now supports command switches by Luca Invernizzi
    * Fix bug #511651, white space around title, by mrk
    * Expanded CLI to gtg to support task descriptions by Bryce Harrington
    * Added a guide to plugins by Chris Johnston
    * RTM plugin tags synchronization by Luca Invernizzi
    * Evolution plugin by Luca Invernizzi
    * Tomboy support by Luca Invernizzi
    * Dbus autostart by Gordon Ball and Luca Invernizzi
    * Notification area bug fixes by Luca Invernizzi

2009-12-11 Getting Things GNOME! 0.2.1
    * Schedule for context menu by Bryce Harrington
    * Improved export feature by Bryce Harrington and Luca Invernizzi
    * Restore closed tasks filtering by selected tag, fixes bug #498857
    * Temporary fix allowing to reset tag color by Matthew Rasmus
    * Added the ability to add a tag from the right click menu in the task browser, by Matthew Rasmus.
    * Better explanation of the "Work view" concept in documentation
    * Multiple selection
    * API clarifications
    * Cut & Paste improvements
    * Notification area plugin improvements
    * Icons reflect action availability
    * Misc. editor bug fixes
    * Misc. tag list bug fixes

2009-12-11 Getting Things GNOME! 0.2
    * Bugs fixes from 0.1.9

2009-12-02 Getting Things GNOME! 0.1.9
    * Support non-exact ("fuzzy") due dates: 'now', 'soon', and 'later' by Kevin Mehall