@@ -1,3 +1,4 @@
+    * Autostart on login, by Luca Invernizzi
     * Preferences dialog, by Paul Kishimoto
     * Send task by mail plugin by Luca Invernizzi
     * Import_json plugin by Bryce Harrington
